--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.stos.iaido</groupId>
     <artifactId>iaido</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>CalcNodeGraph</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
